Reset password for superuser and customize admin form

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -16,5 +16,8 @@
       <p>No polls are available</p>
       {% endif %}
     </ul>
+
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'polls/styles.css' %}" />
   </body>
 </html>
